[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/FX_logic/Splash_zone_logic.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 384, 32 )

[node name="Splash_zone" type="Node2D"]
position = Vector2( 0, 225 )
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -1 )
shape = SubResource( 17 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
